added faker and openai as install_requires

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,9 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires =
+    openai
+    Faker
 
 [options.packages.find]
 where = src
-
